--- a/test/OP/src/styles/out_css/normal/style.css
+++ b/test/OP/src/styles/out_css/normal/style.css
@@ -1,186 +1,19 @@
-@font-face {
-  font-family: 'Kelson Sans Bold';
-  src: url("../fonts/KelsonSansBold.eot");
-  src: url("../fonts/KelsonSansBold.eot?#iefix") format('embedded-opentype'),
-         url("../fonts/KelsonSansBold.woff") format('woff'),
-         url("../fonts/KelsonSansBold.ttf") format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Kelson Sans Regular';
-  src: url("../fonts/KelsonSansRegular.eot");
-  src: url("../fonts/KelsonSansRegular.eot?#iefix") format('embedded-opentype'),
-         url("../fonts/KelsonSansRegular.woff") format('woff'),
-         url("../fonts/KelsonSansRegular.ttf") format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Kelson Sans Light';
-  src: url("../fonts/KelsonSansLight.eot");
-  src: url("../fonts/KelsonSansLight.eot?#iefix") format('embedded-opentype'),
-         url("../fonts/KelsonSansLight.woff") format('woff'),
-         url("../fonts/KelsonSansLight.ttf") format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol,
-ul {
-  list-style: none;
-}
-
-blockquote,
-q {
-  quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
 /*CLEARFIX*/
-
 .clearfix {
-  *zoom: 1;
-}
-
-.clearfix:before {
-  content: '';
-  display: table;
-}
-
-.clearfix:after {
-  content: '';
-  display: table;
-  clear: both;
-}
+  *zoom: 1; }
+  .clearfix:before {
+    content: '';
+    display: table; }
+  .clearfix:after {
+    content: '';
+    display: table;
+    clear: both; }
 
 .banner {
   height: 100vh;
   width: 100%;
-  background: url("../img/background.jpg") no-repeat center center fixed;
-  background-size: cover;
-}
+  background: url(../../img/background.jpg) no-repeat center center fixed;
+  background-size: cover; }
 
 .banner__wrapper {
   width: 80%;
@@ -188,16 +21,14 @@ table {
   max-height: 474px;
   margin: 273px auto 0 auto;
   padding-bottom: 76px;
-  background: url("../img/banner_wrapper.png") center center;
-  background-size: cover;
-}
+  background: url(../../img/banner_wrapper.png) center center;
+  background-size: cover; }
 
 .banner__logo__image {
   display: block;
   width: 109px;
   height: 48px;
-  margin: 63px auto 0 auto;
-}
+  margin: 63px auto 0 auto; }
 
 .banner__logo__title {
   width: 90px;
@@ -207,8 +38,7 @@ table {
   font-family: "Kelson Sans Bold", sans-serif;
   font-size: 21px;
   line-height: 21px;
-  letter-spacing: 1px;
-}
+  letter-spacing: 1px; }
 
 .banner__title {
   margin-top: 38px;
@@ -217,8 +47,7 @@ table {
   font-family: "Kelson Sans Bold", sans-serif;
   font-size: 32px;
   font-weight: 700;
-  line-height: 40px;
-}
+  line-height: 40px; }
 
 .banner__description {
   width: 80%;
@@ -228,15 +57,13 @@ table {
   font-family: "Kelson Sans Light", sans-serif;
   font-size: 18px;
   text-align: center;
-  line-height: 24px;
-}
+  line-height: 24px; }
 
 .banner__link {
   display: block;
   width: 224px;
   margin: 25px auto 0 auto;
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .banner__link__svg {
   height: 56px;
@@ -246,46 +73,32 @@ table {
   fill: white;
   text-align: center;
   letter-spacing: 1.13px;
-  font-size: 18px;
-}
+  font-size: 18px; }
 
 .banner__link__svg__text {
   position: absolute;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 @media screen and (max-width: 1024px) {
   .banner__wrapper {
     max-width: 800px;
     max-height: none;
     margin: 145px auto 0 auto;
-    padding-bottom: 50px;
-  }
-
+    padding-bottom: 50px; }
   .banner__logo__image {
     width: 96px;
     height: 42px;
-    margin-top: 70px;
-  }
-
+    margin-top: 70px; }
   .banner__logo__title {
-    margin-top: 13px;
-  }
-
+    margin-top: 13px; }
   .banner__title {
     width: 80%;
-    margin: 38px auto 0 auto;
-  }
-
+    margin: 38px auto 0 auto; }
   .banner__description {
-    margin-top: 14px;
-  }
-
+    margin-top: 14px; }
   .banner__link {
     margin-top: 42px;
-    margin-bottom: 20px;
-  }
-}
+    margin-bottom: 20px; } }
 
 @media screen and (width: 375px) {
   .banner__wrapper {
@@ -295,44 +108,30 @@ table {
     margin: 0;
     background-image: none;
     background-color: white;
-    opacity: 0.9;
-  }
-
+    opacity: 0.9; }
   .banner__logo__image {
     width: 83px;
     height: 36px;
-    margin-top: 77px;
-  }
-
+    margin-top: 77px; }
   .banner__logo__title {
-    margin-top: 14px;
-  }
-
+    margin-top: 14px; }
   .banner__title {
     max-width: 280px;
     margin: 61px auto 0 auto;
     font-size: 24px;
     font-weight: 700;
-    line-height: 32px;
-  }
-
+    line-height: 32px; }
   .banner__description {
     margin: 0 auto;
     margin-top: 23px;
     width: 100%;
-    max-width: 270px;
-  }
-
+    max-width: 270px; }
   .banner__link {
     width: 216px;
-    margin-top: 56px;
-  }
-
+    margin-top: 56px; }
   .banner__link__svg {
     height: 56px;
-    width: 216px;
-  }
-}
+    width: 216px; } }
 
 @media screen and (max-width: 374px) {
   .banner__wrapper {
@@ -342,68 +141,45 @@ table {
     margin: 0;
     background-image: none;
     background-color: white;
-    opacity: 0.9;
-  }
-
+    opacity: 0.9; }
   .banner__logo__image {
     width: 83px;
     height: 36px;
-    margin-top: 52px;
-  }
-
+    margin-top: 52px; }
   .banner__logo__title {
-    margin-top: 14px;
-  }
-
+    margin-top: 14px; }
   .banner__title {
     max-width: 280px;
     margin: 39px auto 0 auto;
     font-size: 24px;
     font-weight: 700;
-    line-height: 32px;
-  }
-
+    line-height: 32px; }
   .banner__description {
     margin: 17px auto 0 auto;
-    max-width: 258px;
-  }
-
+    max-width: 258px; }
   .banner__link {
     width: 200px;
-    margin-top: 15px;
-  }
-
+    margin-top: 15px; }
   .banner__link__svg {
     height: 56px;
-    width: 216px;
-  }
-}
+    width: 216px; } }
 
 @media screen and (max-width: 0px) {
   .banner__logo__image {
-    margin-top: 52px;
-  }
-
+    margin-top: 52px; }
   .banner__title {
-    margin-top: 39px;
-  }
-
+    margin-top: 39px; }
   .banner__description {
     margin-top: 17px;
-    max-width: 258px;
-  }
-
+    max-width: 258px; }
   .banner__link {
     width: 200px;
-    margin-top: 15px;
-  }
-}
+    margin-top: 15px; } }
 
 .banner1__logo {
   display: block;
   margin: 0 auto;
-  margin-top: 85px;
-}
+  margin-top: 85px; }
 
 .banner1__title {
   margin-top: 32px;
@@ -412,24 +188,18 @@ table {
   font-family: "Kelson Sans Bold", sans-serif;
   font-size: 32px;
   font-weight: 700;
-  line-height: 40px;
-}
-
-.banner1__title:before,
-.banner1__title:after {
-  margin-right: 28px;
-  padding-bottom: 12px;
-  content: "";
-  display: inline-block;
-  height: 5px;
-  width: 34px;
-  background: url("../out_css/img/banner1_title_line.svg") no-repeat;
-}
-
-.banner1__title:after {
-  margin-left: 28px;
-  margin-right: 0;
-}
+  line-height: 40px; }
+  .banner1__title:before, .banner1__title:after {
+    margin-right: 28px;
+    padding-bottom: 12px;
+    content: "";
+    display: inline-block;
+    height: 5px;
+    width: 34px;
+    background: url(../img/banner1_title_line.svg) no-repeat; }
+  .banner1__title:after {
+    margin-left: 28px;
+    margin-right: 0; }
 
 .banner1__description {
   width: 450px;
@@ -440,8 +210,7 @@ table {
   font-family: "Kelson Sans Light", sans-serif;
   font-size: 18px;
   font-weight: 300;
-  line-height: 24px;
-}
+  line-height: 24px; }
 
 .banner1__link {
   display: block;
@@ -449,87 +218,54 @@ table {
   height: 15px;
   margin: 0 auto;
   margin-top: 83px;
-  background: url("../out_css/img/banner1_link.svg") no-repeat;
-}
+  background: url(../img/banner1_link.svg) no-repeat; }
 
 @media screen and (max-width: 1535px) {
-  .banner1__title:before,
-  .banner1__title:after {
-    margin-right: 34px;
-  }
-
+  .banner1__title:before, .banner1__title:after {
+    margin-right: 34px; }
   .banner1__title:after {
     margin-left: 34px;
-    margin-right: 0;
-  }
-
+    margin-right: 0; }
   .banner1__link {
-    margin-top: 78px;
-  }
-}
+    margin-top: 78px; } }
 
 @media screen and (max-width: 1023px) {
   .banner1__logo {
-    margin-top: 141px;
-  }
-
+    margin-top: 141px; }
   .banner1__title {
     width: 264px;
     margin: 0 auto;
     margin-top: 31px;
     font-size: 24px;
     font-weight: 700;
-    line-height: 32px;
-  }
-
-  .banner1__title:before,
-  .banner1__title:after {
-    content: none;
-  }
-
-  .banner1__title:after {
-    content: "";
-    display: block;
-    margin: 0 auto;
-    margin-top: 18px;
-  }
-
+    line-height: 32px; }
+    .banner1__title:before, .banner1__title:after {
+      content: none; }
+    .banner1__title:after {
+      content: "";
+      display: block;
+      margin: 0 auto;
+      margin-top: 18px; }
   .banner1__description {
     margin-top: 12px;
-    width: 272px;
-  }
-
+    width: 272px; }
   .banner1__description__mobile {
-    display: block;
-  }
-
+    display: block; }
   .banner1__link {
-    margin-top: 111px;
-  }
-}
+    margin-top: 111px; } }
 
 @media screen and (max-width: 374px) {
   .banner1__logo {
-    margin-top: 85px;
-  }
-
+    margin-top: 85px; }
   .banner1__title {
-    margin-top: 38px;
-  }
-
-  .banner1__title:after {
-    margin-top: 13px;
-  }
-
+    margin-top: 38px; }
+    .banner1__title:after {
+      margin-top: 13px; }
   .banner1__description {
     margin-top: 9px;
-    width: 250px;
-  }
-
+    width: 250px; }
   .banner1__link {
-    margin-top: 90px;
-  }
-}
+    margin-top: 90px; } }
 
 .numbers__title {
   margin-top: 54px;
@@ -537,8 +273,7 @@ table {
   color: #a46393;
   font-family: "Kelson Sans Bold", sans-serif;
   font-size: 32px;
-  line-height: 40px;
-}
+  line-height: 40px; }
 
 .numbers__description {
   margin-top: 5px;
@@ -547,38 +282,32 @@ table {
   font-family: "Kelson Sans Light", sans-serif;
   font-size: 16px;
   letter-spacing: 0.5px;
-  line-height: 24px;
-}
+  line-height: 24px; }
 
 .costs {
   width: 1224px;
   height: 190px;
   margin: 0 auto;
-  margin-top: 46px;
-}
+  margin-top: 46px; }
 
 .costs__item {
   float: left;
   width: 200px;
   height: 190px;
-  margin: 0 28px;
-}
+  margin: 0 28px; }
 
 .costs__item:first-child {
-  margin-left: 0;
-}
+  margin-left: 0; }
 
 .costs__item:last-child {
-  margin-right: 0;
-}
+  margin-right: 0; }
 
 .costs__item__image {
   width: 77px;
   height: 77px;
   margin: 0 auto;
   border-radius: 50%;
-  border: 1px solid #a46393;
-}
+  border: 1px solid #a46393; }
 
 .costs__item__number {
   margin-top: 25px;
@@ -586,8 +315,7 @@ table {
   color: #a46393;
   font-family: "Kelson Sans Bold", sans-serif;
   font-size: 48px;
-  line-height: 45px;
-}
+  line-height: 45px; }
 
 .costs__item__title {
   margin-top: 23px;
@@ -597,67 +325,46 @@ table {
   font-size: 18px;
   font-weight: 400;
   letter-spacing: 0.5px;
-  line-height: 10px;
-}
+  line-height: 10px; }
 
 @media screen and (max-width: 1024px) {
   .numbers__description {
-    margin-top: 9px;
-  }
-
+    margin-top: 9px; }
   .costs {
     width: 912px;
-    margin-top: 42px;
-  }
-
+    margin-top: 42px; }
   .costs__item {
     float: left;
     width: 180px;
-    margin: 0 1.5px;
-  }
-}
+    margin: 0 1.5px; } }
 
 @media screen and (max-width: 375px) {
   .numbers__title {
     width: 300px;
     margin: 0 auto;
-    margin-top: 49px;
-  }
-
+    margin-top: 49px; }
   .numbers__description {
     margin-top: 16px;
     font-size: 14px;
-    line-height: 21px;
-  }
-
+    line-height: 21px; }
   .costs {
     width: 100%;
     height: auto;
     max-width: 375px;
-    margin-top: 35px;
-  }
-
+    margin-top: 35px; }
   .costs__item {
     float: none;
     width: 100%;
     max-width: 375px;
     margin: 0 1.5px;
-    margin-top: 34px;
-  }
-
+    margin-top: 34px; }
   .costs__item:first-child {
-    margin-top: 0;
-  }
-}
+    margin-top: 0; } }
 
 @media screen and (max-width: 320px) {
   .numbers__title {
     width: 285px;
     margin: 0 auto;
-    margin-top: 42px;
-  }
-
+    margin-top: 42px; }
   .numbers__description {
-    margin-top: 15px;
-  }
-}
+    margin-top: 15px; } }
