--- a/test/OP/src/styles/out_scss/normal/style.scss
+++ b/test/OP/src/styles/out_scss/normal/style.scss
@@ -18,38 +18,33 @@ $textColor: #4a4a4a;
     clear: both;
   }
 }
+
 //BANNER DESKTOP HD
 .banner{
   height: 100vh;
   width: 100%;
-  background: url(../img/background.jpg) no-repeat center center fixed;
-  background-color: rgba(255, 255, 255, 0.3);
+  background: url(../../img/background.jpg) no-repeat center center fixed;
   background-size: cover;
 }
 .banner__wrapper{
-  position: absolute;
   width: 80%;
   max-width: 992px;
   max-height: 474px;
-  margin: auto;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-image: url(../img/banner_wrapper.png);
+  margin: 273px auto 0 auto;
+  padding-bottom: 76px;
+  background: url(../../img/banner_wrapper.png) center center;
+  background-size: cover;
 }
 .banner__logo__image{
   display: block;
   width: 109px;
   height: 48px;
-  margin: 0 auto;
-  margin-top: 63px;
+  margin: 63px auto 0 auto;
 }
 .banner__logo__title{
   width: 90px;
   height: 21px;
-  margin: 0 auto;
-  margin-top: 15px;
+  margin: 14px auto 0 auto;
   color: $mainColor;
   font-family: $KelsonB;
   font-size: 21px;
@@ -57,7 +52,7 @@ $textColor: #4a4a4a;
   letter-spacing: 1px;
 }
 .banner__title{
-  margin-top: 36px;
+  margin-top: 38px;
   text-align: center;
   color: $mainColor;
   font-family: $KelsonB;
@@ -68,8 +63,7 @@ $textColor: #4a4a4a;
 .banner__description{
   width: 80%;
   max-width: 736px;
-  margin: 0 auto;
-  margin-top: 24px;
+  margin: 22px auto 0 auto;
   color: $textColor;
   font-family: $KelsonL;
   font-size: 18px;
@@ -79,59 +73,58 @@ $textColor: #4a4a4a;
 .banner__link{
   display: block;
   width: 224px;
-  margin: 0 auto;
-  margin-top: 25px;
+  margin: 25px auto 0 auto;
   cursor: pointer;
 }
-.banner__link__bg{
-  width: 224px;
+.banner__link__svg{
   height: 56px;
-  fill: $mainColor;
-  cursor:pointer;
-}
-.banner__link__text{
-  fill: #fff;
+  width: 224px;
   font-weight: 700;
   font-family: $KelsonB;
-  font-size: 18px;
-  line-height: 58px;
+  fill: white;
+  text-align: center;
   letter-spacing: 1.13px;
-  pointer-events: none;
+  font-size: 18px;
+}
+.banner__link__svg__text{
+  position: absolute;
+  text-decoration: none;
 }
 //BANNER DESKTOP
-@media screen and (max-width: 1535px){
+@media screen and (max-width: 1024px){
 .banner__wrapper{
   max-width: 800px;
-  max-height: 478px;
+  max-height: none;
+  margin: 145px auto 0 auto;
+  padding-bottom: 50px;
 }
 .banner__logo__image{
   width: 96px;
   height: 42px;
-  margin-top: 69px;
+  margin-top: 70px;
 }
 .banner__logo__title{
   margin-top: 13px;
 }
 .banner__title{
-  margin-top: 40px;
+  width: 80%;
+  margin: 38px auto 0 auto;
 }
 .banner__description{
-  margin-top: 13px;
+  margin-top: 14px;
 }
 .banner__link{
   margin-top: 42px;
   margin-bottom: 20px;
 }
 }
-//BANNER IPHONE 6
-@media  screen and (max-width: 1023px){
+// BANNER IPHONE 6
+@media  screen and (width: 375px){
 .banner__wrapper{
-   position: relative;
    width: 100%;
-   height: auto;
    max-width: none;
-   max-height: none;
    min-height: 100vh;
+   margin: 0;
    background-image: none;
    background-color: white;
    opacity: 0.9;
@@ -146,15 +139,14 @@ $textColor: #4a4a4a;
   }
   .banner__title{
     max-width: 280px;
-    margin: 0 auto;
-    margin-top: 62px;
+    margin: 61px auto 0 auto;
     font-size: 24px;
     font-weight: 700;
     line-height: 32px;
   }
   .banner__description{
     margin: 0 auto;
-    margin-top: 22px;
+    margin-top: 23px;
     width: 100%;
     max-width: 270px;
   }
@@ -162,12 +154,55 @@ $textColor: #4a4a4a;
     width: 216px;
     margin-top: 56px;
   }
-  .banner__link__bg{
+  .banner__link__svg{
+    height: 56px;
     width: 216px;
   }
 }
-//BANNER IPHONE 5
+// BANNER IPHONE 5
 @media  screen and (max-width: 374px){
+.banner__wrapper{
+   width: 100%;
+   max-width: none;
+   min-height: 100vh;
+   margin: 0;
+   background-image: none;
+   background-color: white;
+   opacity: 0.9;
+ }
+ .banner__logo__image{
+   width: 83px;
+   height: 36px;
+   margin-top: 52px;
+ }
+  .banner__logo__title{
+    margin-top: 14px;
+  }
+  .banner__title{
+    max-width: 280px;
+    margin: 39px auto 0 auto;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 32px;
+  }
+  .banner__description{
+    margin: 17px auto 0 auto;
+    max-width: 258px;
+  }
+  .banner__link{
+    width: 200px;
+    margin-top: 15px;
+  }
+  .banner__link__svg{
+    height: 56px;
+    width: 216px;
+  }
+}
+
+
+
+
+@media  screen and (max-width: 0px){
   .banner__logo__image{
     margin-top: 52px;
   }
@@ -183,6 +218,7 @@ $textColor: #4a4a4a;
     margin-top: 15px;
   }
 }
+
 //BANNER 1 DESKTOP HD
 .banner1__logo {
   display: block;
@@ -296,6 +332,7 @@ $textColor: #4a4a4a;
     margin-top: 90px;
   }
 }
+
 //NUMBERS DESKTOP HD
 .numbers__title{
   margin-top: 54px;
